--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="api_key" translatable="false" templateMergeStrategy="preserve">
+    AIzaSyCs1Pjkchm5QW-zK5OEmvTZiXDsOTas368
+    </string>
 </resources>
